WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
306282
Fix crash after enabling speculation rules prefetching
https://bugs.webkit.org/show_bug.cgi?id=306282
Summary
Fix crash after enabling speculation rules prefetching
Alex Christensen
Reported
2026-01-26 10:11:41 PST
rdar://168835297
Attachments
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2026-01-26 10:12:58 PST
Pull request:
https://github.com/WebKit/WebKit/pull/57265
EWS
Comment 2
2026-01-26 10:29:35 PST
Committed
306219@main
(5c2e1b9bf5e8): <
https://commits.webkit.org/306219@main
> Reviewed commits have been landed. Closing PR #57265 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug