Fix crash after enabling speculation rules prefetching https://bugs.webkit.org/show_bug.cgi?id=306282 rdar://168835297

Reviewed by Wenson Hsieh.

Feeding a null URL into m_prefetchedData.contains causes a crash.
This moves the invalid URL check to before the contains check to
prevent such a crash.

* Source/WebCore/loader/DocumentPrefetcher.cpp:
(WebCore::DocumentPrefetcher::prefetch):

Canonical link: https://commits.webkit.org/306219@main