Source/WebCore/loader/DocumentPrefetcher.cpp
@@ -108,10 +108,10 @@ void DocumentPrefetcher::prefetch(const URL& url, const Vector<String>& tags, st
     if (!document)
         return;
 
-    if (m_prefetchedData.contains(url))
+    if (!url.isValid())
         return;
 
-    if (!url.isValid())
+    if (m_prefetchedData.contains(url))
         return;
 
     if (!isPassingSecurityChecks(url, *document.get()))
